--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UFT-8">
-        <title>Odin't recipes</title>
+        <title>Odin's recipes</title>
     </head>
     <body>
         <h1>Odin's recipes</h1>
